# Sentry

./: GEMINI.md  README.md  api.http  docker-compose.yml  pyproject.toml
.agents/skills/router-development/: SKILL.md
.github/workflows/: vite-deploy.yml
app/: Dockerfile  api.http  query.sql
app/src/: config.py  database.py  main.py
app/src/issues/: __init__.py  router.py  schemas.py  service.py
app/src/logs/: router.py  schemas.py  service.py
app/src/shared/: cache.py  exceptions.py  rate_limiter.py
app/tests/: test_issues.py
client/: Dockerfile  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: main.tsx
client/src/components/: AppLogo.tsx  AppLogoIcon.tsx  Layout.tsx
client/src/css/: app.css
client/src/lib/: api.ts
client/src/pages/alerts/: Index.tsx
client/src/pages/auth/: ForgotPassword.tsx  Login.tsx  ResetPassword.tsx  Signup.tsx  VerifyEmail.tsx
client/src/pages/dashboard/: Index.tsx
client/src/pages/issues/: Index.tsx
client/src/pages/logs/: Index.tsx
client/src/pages/reports/: Index.tsx
client/src/pages/welcome/: Index.tsx
client/src/routes/: index.tsx  manifest.ts
