[project]
name = "centralize-logging-system"
version = "0.1.0"
description = "Production-ready backend API built with FastAPI"
authors = [
    { name = "Angelo", email = "angelo@example.com" }
]
dependencies = [
    "fastapi>=0.128.4",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
    "python-dotenv>=1.2.1",
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "asyncio",
    "supabase>=2.27.3",
    "sentry-sdk>=2.52.0",
    "redis>=7.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "reportlab>=5.0.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
]
requires-python = ">=3.12"

